--- a/ansible/playbooks/roles/deploy_webapp/tasks/main.yml
+++ b/ansible/playbooks/roles/deploy_webapp/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy webapp into place
-  copy: remote_src=True src="{{ src_root }}/{{ webapps_dir }}/{{ webapp_name }} dest={{ webapp_deploy_dir }}
+  copy: remote_src=True src="{{ src_root }}/{{ webapps_dir }}/{{ webapp_name }}" dest={{ webapp_deploy_dir }}
 
 - name: Check {{ webapp_deploy_dir }} directory
   command:  ls -ltr {{ webapp_deploy_dir }}
